# composition-function-filter

./: CMakeLists.txt
cmake/: function-filterConfig.cmake.in
include/function-filter/: Filter.hpp  Info.hpp  Marker.hpp
src/: Filter.cpp  Info.cpp  Marker.cpp
